feat: rewriting core runtime (#75)